--- a/public/index.html
+++ b/public/index.html
@@ -241,6 +241,42 @@
       background-color: #f9f9f9;
     }
 
+    /* Fullscreen overlay for Alpha Agreement modal - perfectly center modal */
+    #embeddedAgreementNotice {
+      position: fixed;
+      inset: 0;
+      width: 100vw;
+      height: 100vh;
+      background: rgba(0,0,0,0.85);
+      z-index: 10000;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      /* Hide by default, show via JS or when needed */
+      display: none;
+    }
+    #embeddedAgreementNotice .card-block {
+      background-color: #fff8f2;
+      border: 2px dashed #FFA76D;
+      max-width: 500px;
+      width: 90%;
+      min-width: 0;
+      text-align: center;
+      box-shadow: 0 0 24px rgba(0,0,0,0.15);
+      margin: 0; /* Remove margin that could affect centering */
+      padding: 2em 1.5em;
+      box-sizing: border-box;
+    }
+
+    /* Ensure modal is centered on all screen sizes (mobile responsive) */
+    @media (max-width: 600px) {
+      #embeddedAgreementNotice .card-block {
+        max-width: 98vw;
+        width: 98vw;
+        padding: 1.25em 0.5em;
+      }
+    }
+
     
 
     .card-block p {
@@ -316,20 +352,21 @@ window.acceptEmbeddedAgreement = async function () {
 
   if (!embeddedCheckbox.checked || !window.currentUserId) return;
 
- try {
-  localStorage.setItem("alphaAgreementAccepted", "true");
+  try {
+    localStorage.setItem("alphaAgreementAccepted", "true");
 
-  await setDoc(doc(db, "userStatus", window.currentUserId), {
-    agreedToAlphaTerms: true
-  }, { merge: true });
+    await setDoc(doc(db, "users", window.currentUserId), {
+      agreementAccepted: true
+    }, { merge: true });
 
-  document.getElementById("embeddedAgreementNotice").style.display = "none";
-  document.getElementById("journalTab").style.display = "block";
-  document.getElementById("tabButtons").style.display = "flex";
-} catch (err) {
-  alert("Error saving agreement: " + err.message);
-  console.error("Detailed agreement save error:", err);
-}
+    document.getElementById("embeddedAgreementNotice").style.display = "none";
+    document.getElementById("journalTab").style.display = "block";
+    document.getElementById("tabButtons").style.display = "flex";
+    document.querySelector("main").style.display = "block";
+  } catch (err) {
+    alert("Error saving agreement: " + err.message);
+    console.error("Detailed agreement save error:", err);
+  }
 };
 
 
@@ -348,6 +385,8 @@ document.addEventListener("DOMContentLoaded", () => {
     let currentUserId = null;
 
 onAuthStateChanged(auth, async (user) => {
+  // DEBUG: Log when onAuthStateChanged handler runs and user object
+  console.log("onAuthStateChanged triggered. User object:", user);
 
 
   if (!user) {
@@ -377,14 +416,13 @@ onAuthStateChanged(auth, async (user) => {
   if (!userDoc.exists()) {
     await setDoc(userDocRef, {
       email: user.email || "",
-      createdAt: serverTimestamp()
+      createdAt: serverTimestamp(),
+      userRole: "journaler",
+      agreementAccepted: false
     });
   }
 
-  const statusDocRef = doc(db, "userStatus", user.uid);
-  const statusDoc = await getDoc(statusDocRef);
-
-
+  
   const statusDiv = document.getElementById("userStatus");
   const displayName = userDoc.data()?.displayName;
   statusDiv.textContent = displayName
@@ -404,9 +442,10 @@ onAuthStateChanged(auth, async (user) => {
     statusDiv.appendChild(avatarImg);
   }
 
-  const agreed = statusDoc.exists() && statusDoc.data().agreedToAlphaTerms;
+  const agreed = userDoc.data()?.agreementAccepted === true;
   const localAccepted = localStorage.getItem("alphaAgreementAccepted") === "true";
-
+  // DEBUG: Log agreement check state
+  console.log("Agreement debug:", {agreed, localAccepted, userDoc: userDoc.data()});
   if (!agreed && !localAccepted) {
     document.getElementById("embeddedAgreementNotice").style.display = "block";
     document.getElementById("journalTab").style.display = "none";
@@ -484,10 +523,10 @@ window.onload = function () {
         const fileInput = document.getElementById("attachment");
         const file = fileInput.files[0];
         const maxFileSizeMB = 10;
-if (file && file.size > maxFileSizeMB * 1024 * 1024) {
-  alert(`File exceeds ${maxFileSizeMB}MB limit. Please upload a smaller file.`);
-  return;
-}
+        if (file && file.size > maxFileSizeMB * 1024 * 1024) {
+          alert(`File exceeds ${maxFileSizeMB}MB limit. Please upload a smaller file.`);
+          return;
+        }
 
         const previewDiv = document.getElementById("attachmentPreview");
         previewDiv.innerHTML = ""; // Clear previous preview
@@ -541,29 +580,6 @@ if (file && file.size > maxFileSizeMB * 1024 * 1024) {
         if (document.getElementById("coachReviewCheckbox")?.checked) {
           entryData.coachReview = true;
         }
-        // Add to Firestore and get the new doc ref
-        const docRef = await addDoc(collection(db, "journalEntries"), entryData);
-        console.log("📘 Created entry ID:", docRef.id);
-   if (entryData.coachReview) {
-    try {
-      console.log("📨 Notifying coach with entryId:", docRef.id);
-const response = await fetch("https://us-central1-inkwell-alpha.cloudfunctions.net/notifyCoachOfTaggedEntry", {
-  method: "POST",
-  headers: {
-    "Content-Type": "application/json"
-  },
-  body: JSON.stringify({ entryId: docRef.id })
-});
-
-if (!response.ok) {
-  throw new Error("Coach notification failed: " + (await response.text()));
-}
-console.log("📬 Coach notified successfully.");
-    } catch (notifyErr) {
-      console.error("❌ Failed to notify coach:", notifyErr);
-    }
-  }
-
         if (document.getElementById("postSaveActions")?.checked) {
           entryData.maybeReviewLater = true;
         }
@@ -574,7 +590,28 @@ console.log("📬 Coach notified successfully.");
           tags.push(`manifestDate:${today}`);
           entryData.contextManifest = manifestText;
         }
-
+        // Add to Firestore and get the new doc ref
+        // Always set userId field, and ensure queries always filter by userId
+        const docRef = await addDoc(collection(db, "journalEntries"), entryData);
+        console.log("📘 Created entry ID:", docRef.id);
+        if (entryData.coachReview) {
+          try {
+            console.log("📨 Notifying coach with entryId:", docRef.id);
+            const response = await fetch("https://us-central1-inkwell-alpha.cloudfunctions.net/notifyCoachOfTaggedEntry", {
+              method: "POST",
+              headers: {
+                "Content-Type": "application/json"
+              },
+              body: JSON.stringify({ entryId: docRef.id, userId: currentUserId })
+            });
+            if (!response.ok) {
+              throw new Error("Coach notification failed: " + (await response.text()));
+            }
+            console.log("📬 Coach notified successfully.");
+          } catch (notifyErr) {
+            console.error("❌ Failed to notify coach:", notifyErr);
+          }
+        }
 
         // Call embedding function via HTTPS endpoint with fetch
         try {
@@ -730,7 +767,14 @@ console.log("📬 Coach notified successfully.");
     window.deleteEntry = async function (docId) {
       if (!confirm("Are you sure you want to delete this entry?")) return;
       try {
-        await deleteDoc(doc(db, "journalEntries", docId));
+        // Only allow deleting if the entry belongs to the current user
+        const entryRef = doc(db, "journalEntries", docId);
+        const entrySnap = await getDoc(entryRef);
+        if (!entrySnap.exists() || entrySnap.data().userId !== currentUserId) {
+          alert("You do not have permission to delete this entry.");
+          return;
+        }
+        await deleteDoc(entryRef);
         loadPastEntries(); // Refresh view
       } catch (err) {
         console.error("Error deleting entry:", err);
@@ -741,7 +785,14 @@ console.log("📬 Coach notified successfully.");
       const newText = prompt("Edit your entry:", currentText);
       if (!newText) return;
       try {
-        await updateDoc(doc(db, "journalEntries", docId), { text: newText });
+        // Only allow editing if the entry belongs to the current user
+        const entryRef = doc(db, "journalEntries", docId);
+        const entrySnap = await getDoc(entryRef);
+        if (!entrySnap.exists() || entrySnap.data().userId !== currentUserId) {
+          alert("You do not have permission to edit this entry.");
+          return;
+        }
+        await updateDoc(entryRef, { text: newText });
         loadPastEntries(); // Refresh view
       } catch (err) {
         console.error("Error updating entry:", err);
@@ -761,11 +812,13 @@ console.log("📬 Coach notified successfully.");
       try {
         await createUserWithEmailAndPassword(auth, email, password);
         const avatarUrl = document.getElementById("avatarUrlInput").value.trim();
-await setDoc(doc(db, "users", auth.currentUser.uid), {
-  avatarUrl,
-  email: auth.currentUser.email
-});
-        alert("Signed up and logged in!");
+        await setDoc(doc(db, "users", auth.currentUser.uid), {
+          avatarUrl,
+          email: auth.currentUser.email,
+          userRole: "journaler",
+          agreementAccepted: false
+        });
+       
         // TODO: Allow users to set a display name and avatar image for personalization
         document.getElementById("loginModal").style.display = "none";
         document.getElementById("userStatus").textContent = `Journaling as: ${auth.currentUser.email}`;
@@ -829,6 +882,7 @@ window.setJournalMode = function (mode) {
       } else if (tabId === "journalTab") {
         const manifestInput = document.getElementById("manifestInput");
         if (manifestInput && window.currentUserId) {
+          // Always read manifest using the user's UID as the doc ID
           getDoc(doc(db, "manifests", window.currentUserId))
             .then(manifestDoc => {
               if (manifestDoc.exists()) {
@@ -858,6 +912,7 @@ async function buildCalendar() {
   container.innerHTML = "";
 
   // Fetch journal entry dates for current month/year
+  // Only fetch entries for the current user
   const snapshot = await getDocs(query(
     collection(db, "journalEntries"),
     where("userId", "==", currentUserId)
@@ -950,6 +1005,7 @@ async function showPromptsByDate(year, month, day) {
   container.innerHTML = `<p><strong>Entries from ${selectedDate}:</strong></p>`;
 
   const journalRef = collection(db, "journalEntries");
+  // Only fetch entries for the current user
   const snapshot = await getDocs(query(journalRef, where("userId", "==", currentUserId)));
 
   const matches = [];
@@ -1076,13 +1132,11 @@ async function askSophyAboutEntry() {
 
     // Manifest save function
     window.saveManifest = async function () {
-      // Try to get user from Firebase Auth (compat or modular)
+      // Always use current user's UID for manifest doc
       let user = null;
       try {
-        // Modular Firebase Auth
         user = auth.currentUser;
       } catch (e) {
-        // fallback (should not happen in modular)
         user = null;
       }
       const text = document.getElementById("manifestInput").value.trim();
@@ -1097,6 +1151,7 @@ async function askSophyAboutEntry() {
       window.showSpinner("manifestStatus", "Saving...");
 
       try {
+        // Always use user's UID as doc ID for manifests
         await setDoc(doc(db, "manifests", user.uid), {
           statement: text,
           timestamp: serverTimestamp()
@@ -1162,7 +1217,24 @@ window.askSophyToRefineManifest = async function () {
     <p>Your space to reflect, write, and grow.</p>
   </header>
   <div id="userStatus" style="font-size: 0.9em; margin-bottom: 1em;"></div>
-  
+
+
+  <div id="embeddedAgreementNotice">
+    <div class="card-block">
+      <h3 class="section-header" style="color: #FFA76D;">Action Required: Accept Alpha Testing Agreement</h3>
+      <p style="font-size: 0.9em;">Before you can use InkWell, please review and agree to the following:</p>
+      <ul>
+        <li><a href="https://www.pegasusrealm.com/terms-conditions/" target="_blank">Terms & Conditions</a></li>
+        <li><a href="https://www.pegasusrealm.com/privacy-policy/" target="_blank">Privacy Policy</a></li>
+        <li><a href="https://www.pegasusrealm.com/alpha-beta-testers/" target="_blank">Alpha/Beta Tester Agreement</a></li>
+      </ul>
+      <label style="display: block; margin-top: 1em;">
+        <input type="checkbox" id="embeddedAgreementCheckbox" />
+        I have read and agree to all three terms listed above.
+      </label>
+      <button class="btn" onclick="acceptEmbeddedAgreement()" id="acceptEmbeddedAgreementButton" disabled>Accept & Continue</button>
+    </div>
+  </div>
 
   <div id="loginModal" style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.8); display: none; align-items: center; justify-content: center; z-index: 9999;">
     <div class="card-block" style="max-width: 400px; width: 90%; box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);">
@@ -1176,20 +1248,6 @@ window.askSophyToRefineManifest = async function () {
     </div>
   </div>
   <main style="display: block;">
-    <div id="embeddedAgreementNotice" class="card-block" style="display: none; border: 2px dashed #FFA76D; background-color: #fff8f2;">
-  <h3 class="section-header" style="color: #FFA76D;">Action Required: Accept Alpha Testing Agreement</h3>
-  <p style="font-size: 0.9em;">Before you can use InkWell, please review and agree to the following:</p>
-  <ul>
-    <li><a href="https://www.pegasusrealm.com/terms-conditions/" target="_blank">Terms & Conditions</a></li>
-    <li><a href="https://www.pegasusrealm.com/privacy-policy/" target="_blank">Privacy Policy</a></li>
-    <li><a href="https://www.pegasusrealm.com/alpha-beta-testers/" target="_blank">Alpha/Beta Tester Agreement</a></li>
-  </ul>
-  <label style="display: block; margin-top: 1em;">
-    <input type="checkbox" id="embeddedAgreementCheckbox" />
-    I have read and agree to all three terms listed above.
-  </label>
-  <button class="btn" onclick="acceptEmbeddedAgreement()" id="acceptEmbeddedAgreementButton" disabled>Accept & Continue</button>
-</div>
     <div id="tabButtons" style="display: flex; gap: 1em; margin-bottom: 1em;">
         <button class="btn" id="journalTabButton" onclick="showTab('journalTab')" style="flex: 1;">Journal</button>
         <button class="btn" id="calendarTabButton" onclick="showTab('calendarTab')" style="flex: 1;">Past Entries</button>
